[tool.poetry]
name = "link"
version = "0.1.0"
description = "puzzles for LLMs"
authors = ["Veena Ramesh <veena.ramesh.1@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
sqlalchemy = "^2.0.36"
langchain-huggingface = "^0.1.2"
openai = "^1.58.1"
fire = "^0.7.0"
aisuite = "^0.1.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
